--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -2,4 +2,4 @@
 
 {% block header_text %}Start a new To-Do lists{% endblock %}
 
-{% block from_action %}/lists/new{% endblock %}
+{% block from_action %}{% url 'new_list' %}{% endblock %}
