--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -16,9 +16,7 @@
                     <div class="text-center">
                         <h1>{% block header_text %}{% endblock %}</h1>
                         <form method="post" action="{% block from_action %}{% endblock %}">
-                            <input name='item_text' id="id_new_item"
-                                   class="form-control input-lg"
-                                   placeholder="Enter a to-do item"/>
+                            {{ form_text }}
                             {% csrf_token %}
                             {% if error %}
                                 <div class="form-group has-error">
