--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -16,11 +16,12 @@
                     <div class="text-center">
                         <h1>{% block header_text %}{% endblock %}</h1>
                         <form method="post" action="{% block from_action %}{% endblock %}">
-                            {{ form_text }}
+                            
+                            {{ form.text }}
                             {% csrf_token %}
-                            {% if error %}
+                            {% if form.errors %}
                                 <div class="form-group has-error">
-                                    <span class="help-block">{{ error }}</span>
+                                    <div class="help-block">{{ form.text.errors }}</div>
                                 </div>
                             {% endif %}
                         </form>
